--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import url('https://fonts.cdnfonts.com/css/miama');
+
 body{
     font-family: "Inter", sans-serif;
 }
@@ -20,7 +21,7 @@ p{
    max-width: 1440px;
 height: 715px;
 margin: 0 auto;
-background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
+background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(32, 30, 30, 0.9) 100%);
 
 }
 /* nav */
@@ -55,4 +56,131 @@ height: 46px;
     padding: 8px 20px;
 font-weight: 600;
 background: rgb(230, 83, 60);
+}
+.bannar-top{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 1060px;
+
+    
+
+}
+.bannar-context{
+    width: 520px;
+height: 440px;
+justify-content: center;
+align-items: center;
+margin-bottom: 80px;
+margin-right: 32px;
+
+}
+.bannar-context>h1{
+    font-size: 4.9rem;
+    font-weight: 900;
+    color: #FFFFFF;
+    line-height: 100px;
+    
+}
+.bannar-context>p{
+    color: #FFFFFF;
+    opacity: 50%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.shape{
+    font-family: 'Miama', sans-serif;
+    font-weight: 400;
+    font-size:8.5rem;
+}
+.bannar-btn{
+    width: 224px;
+height: 54px;
+padding: 16px 40px 16px 40px;
+border-radius: 42px;
+box-sizing: border-box;
+font-size: 1.1rem;
+font-weight: 600;
+color: #FFFFFF;
+margin: 10px 5px;
+}
+.bannar-img{
+position: relative;
+    
+}
+.bnr-image{
+    margin-left: 150px;
+    padding-bottom: 20px;
+    justify-content: center;
+    align-items: center;
+    width: 349px;
+height: 595px;
+
+}
+.btn-img{
+    position: absolute;
+width: 193px;
+height: 98px;
+box-sizing: border-box;
+border: 1px solid rgba(255, 255, 255, 0.1);
+border-radius: 12px;
+
+backdrop-filter: blur(20px);
+background: rgba(255, 255, 255, 0.1);
+bottom: 380px;
+left: 390px;
+}
+.button-two{
+    width: 206px;
+height: 96px;
+box-sizing: border-box;
+border: 1px solid rgba(255, 255, 255, 0.1);
+border-radius: 12px;
+
+backdrop-filter: blur(20px);
+background: rgba(48, 48, 48, 0.54);
+position: absolute;
+top: 420px;
+right: 260px;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.text{
+    margin-left: 8px;
+}
+.text>h3{
+    font-size: 1.9rem;
+font-weight: 900;
+color: rgb(250, 250, 249);
+}
+.text>p{
+    color: rgba(239, 237, 232, 0.65);
+    font-size: 1rem;
+font-weight: 400;
+text-align: center;
+}
+.btn-img>h1{
+    color: rgb(255, 255, 255);
+    font-size: 2.4rem;
+font-weight: 900;
+
+}
+.btn-img>p{
+    color: rgb(255, 255, 255);
+    font-size: 0.9rem;
+font-weight: 400;
+}
+.round{
+    background-color: #E6533C;
+    width: 40px;
+height: 40px;
+border-radius: 50%;
+}
+.icon{
+    color: #FFFFFF;
+}
+@media screen and (max-width:576px) {
+    
 }
