--- a/styles/style.css
+++ b/styles/style.css
@@ -199,9 +199,9 @@ p {
   }
   .bannar-context {
     width: 97%;
-    padding-left: 20px;
+    margin-left: 30px;
     padding-top: 20px;
-    margin-right: 0px;
+    margin-right: 20px;
     margin-bottom: 0px;
   }
   .bannar-context > h1 {
