--- a/styles/style.css
+++ b/styles/style.css
@@ -198,10 +198,10 @@ p {
     height: auto;
   }
   .bannar-context {
-    width: 97%;
-    margin-left: 30px;
+    width: 90%;
+    margin-left: 15px;
     padding-top: 20px;
-    margin-right: 20px;
+    margin-right: 0px;
     margin-bottom: 0px;
   }
   .bannar-context > h1 {
@@ -217,6 +217,9 @@ p {
     font-weight: 100;
     width: 274px;
     height: 96px;
+  }
+  .btn-top {
+    display: flex;
   }
   .bannar-btn {
     width: 169px;
