added bmi section

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,10 @@ h5 {
   font-size: 1.1rem;
   font-weight: 600;
 }
+h3 {
+  color: #ffffff;
+  font-size: 1.8rem;
+}
 /* banner */
 .bannar-container {
   max-width: 1440px;
@@ -43,7 +47,7 @@ h5 {
   height: 46px;
   padding: 70px 0;
 }
-.logo {
+.logo > h3 {
   color: #e6533c;
   font-size: 2.1rem;
   font-weight: 800;
@@ -283,6 +287,124 @@ h5 {
   background-repeat: no-repeat;
   display: none;
   border-radius: 18px;
+}
+
+.bmi-container {
+  max-width: 1440px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.bmi-heading {
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 671px;
+  height: 120px;
+  margin-top: 88px;
+}
+
+.bmi-context {
+  height: 487px;
+  background-color: #222222;
+  max-width: 1440px;
+  margin: 0 auto;
+  justify-content: center;
+  text-align: center;
+  text-align: center;
+  margin-top: 60px;
+}
+.Calculator-container {
+  justify-content: start;
+  align-items: center;
+  margin: 0 auto;
+  display: flex;
+  width: 1060px;
+}
+.Calculator-chart {
+  width: 50%;
+  height: 336px;
+  margin-top: 30px;
+  justify-content: start;
+  align-items: center;
+  padding-right: 20px;
+}
+.Calculator-chart > h3 {
+  text-align: start;
+  margin-bottom: 40px;
+}
+.chart-container {
+  display: grid;
+  grid-template-columns: 155px 155px;
+  width: 310px;
+  height: 216px;
+}
+.chart-item {
+  border: 1px solid #ffffff1a;
+  justify-content: center;
+  align-items: center;
+}
+.chart-item > h5 {
+  justify-content: center;
+  align-items: center;
+  margin-top: 12px;
+  text-align: start;
+  margin-left: 18px;
+}
+.chart-item > p {
+  justify-content: center;
+  align-items: center;
+  margin-top: 12px;
+  text-align: start;
+  margin-left: 18px;
+}
+.bmi-form {
+  width: 577px;
+  height: 386px;
+  margin: 0 auto;
+  margin-top: 50px;
+  justify-content: start;
+  align-items: center;
+  text-align: start;
+}
+
+.form-context {
+  width: 577px;
+  height: 96px;
+  justify-content: start;
+  align-items: center;
+  margin-top: 12px;
+  text-align: start;
+}
+.form-context > p {
+  margin-top: 15px;
+}
+
+.input-item {
+  width: 282.5px;
+  height: 48px;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.6);
+  border-radius: 8px;
+  border: none;
+  margin-bottom: 18px;
+  padding: 12px 40px 12px 20px;
+  border-right: 20px solid transparent;
+}
+
+::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+.input-factor {
+  width: 577px;
+  height: 48px;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.6);
+  border-radius: 8px;
+  border: none;
+  margin-bottom: 20px;
+  padding: 12px 20px 12px 20px;
+  border-right: 20px solid transparent;
 }
 
 @media screen and (max-width: 576px) {
